# Crucible

./: .env.example  .gitignore  CLAUDE.md  crucible_dev_brief.md  pyproject.toml
crucible/: __init__.py  __main__.py  cli.py  config.py  engine.py  schemas.py
crucible/executor/: delta.py  executor.py  routing_helper.py  synthesis.py
crucible/executor/grammars/: debate.py  parallel.py  sequential.py
crucible/openrouter/: __init__.py  client.py
crucible/red_team/: prompts.py
crucible/routing/: __init__.py  base.py  cost_aware.py  defaults.py  diversity.py  pool.py  role_mapped.py  role_specialized.py  tiered.py
crucible/triage/: agent.py  prompts.py
tests/: __init__.py  test_routing.py
